<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    >

    <!--    <TableLayout-->
<!--        android:id="@+id/play_grid"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="150dp">-->

<!--        <TableRow android:gravity="center_horizontal">-->

<!--            <Button-->
<!--                android:id="@+id/one"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:text="1"-->
<!--                android:textSize="70dp" />-->

<!--            <Button-->
<!--                android:id="@+id/two"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:text="2"-->
<!--                android:textSize="70dp" />-->

<!--            <Button-->
<!--                android:id="@+id/three"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:text="3"-->
<!--                android:textSize="70dp" />-->
<!--        </TableRow>-->

<!--        <TableRow android:gravity="center_horizontal">-->

<!--            <Button-->
<!--                android:id="@+id/four"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:text="4"-->
<!--                android:textSize="70dp" />-->

<!--            <Button-->
<!--                android:id="@+id/five"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:text="5"-->
<!--                android:textSize="70dp" />-->

<!--            <Button-->
<!--                android:id="@+id/six"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:text="6"-->
<!--                android:textSize="70dp" />-->
<!--        </TableRow>-->

<!--        <TableRow android:gravity="center_horizontal">-->

<!--            <Button-->
<!--                android:id="@+id/seven"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:text="7"-->
<!--                android:textSize="70dp" />-->

<!--            <Button-->
<!--                android:id="@+id/eight"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:text="8"-->
<!--                android:textSize="70dp" />-->

<!--            <Button-->
<!--                android:id="@+id/nine"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:text="9"-->
<!--                android:textSize="70dp" />-->

<!--        </TableRow>-->

<!--    </TableLayout>-->

    <edu.unal.mytictactoegame.BoardView
        android:id="@+id/board"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/information"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/info"
        android:textColor="@color/purple_200"
        android:textSize="20dp" />

    <TableLayout
        android:id="@+id/count_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/humanimageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_human" />

            <TextView
                android:id="@+id/humantext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_count_text" />

            <TextView
                android:id="@+id/humancount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_count" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/androidimageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_android" />

            <TextView
                android:id="@+id/androidtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_count_text" />

            <TextView
                android:id="@+id/androidcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_count" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/tieimageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_tie" />

            <TextView
                android:id="@+id/tietext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tie_text" />

            <TextView
                android:id="@+id/tiecount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ties"/>
        </TableRow>

    </TableLayout>

</LinearLayout>